--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 
+  <iframe src="https://www.desmos.com/calculator/3egn9wrufi?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe>
+
 <h1>Types of Golf Clubs</h1>
   
   <div class="club-container">
